--- a/index.html
+++ b/index.html
@@ -9,8 +9,119 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <title>Shopee - Clone Coding</title>
     <style>
-        @import url('css/default.css');
-        @import url('css/gnb.css');
+        body,h1,h2, p,div,input,a,li,ul,button {
+    margin: 0;
+    padding: 0;
+    font-size: 13px;
+    text-decoration: none;
+    list-style: none;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.flex-row {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.flex-col {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+}
+       .gnb {
+    background-color: #f53d2d;
+    padding: 10px;
+    color: white;
+
+}
+
+.top,
+.bottom {
+    width: 1200px;
+    margin: auto;
+}
+
+.top {
+    margin-bottom: 20px
+}
+
+.left {
+    margin-right: auto;
+}
+
+.left>li,
+.left>i {
+    margin-right: 7px;
+}
+
+.right {
+    margin-left: auto;
+}
+
+.right>li,
+.right>i {
+    margin-left: 10px;
+}
+
+.right>li>i {
+    margin-right: 7px;
+}
+
+.search {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.search-box {
+    background-color: white;
+    width: 840px;
+    height: 40px;
+    border-radius: 2px;
+    padding: 1px;
+}
+
+.search-box > input {
+    width: 80%;
+    height: 35px;
+
+    margin-right: auto;
+    border: none;
+}
+
+.search-box > button {
+    background-color: #f53d2d;
+    color: white;
+    width: 60px;
+    height: 35px;
+    border-radius: 2px;
+    margin-right: 1px;
+    border: none;
+}
+
+.tags {
+    margin-top: 5px;
+}
+
+.tags>li {
+    margin-right: 10px;
+}
+
+.tags>li:last-child {
+    margin-right: auto;
+}
+
+.cart {
+    font-size: 27px;
+    margin-right: 70px;
+}
+.bottom > img {
+    margin-bottom: 10px;
+}
     </style>
 
 
