--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             </div>
         </div>
         <div class="bottom flex-row">
-            <img width="160" height="50" src="./image/logo_shopee.png">
+            <img width="160" height="50" src="./https://postimg.cc/w3Vv83QP">
             <div class="search flex-col">
                 <div class="search-box flex-row">
                     <input type="text">
