--- a/index.html
+++ b/index.html
@@ -5,126 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-    <title>Shopee - Clone Coding</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+    <title>Shopee - clone coding</title>
     <style>
-        body,h1,h2, p,div,input,a,li,ul,button {
-    margin: 0;
-    padding: 0;
-    font-size: 13px;
-    text-decoration: none;
-    list-style: none;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-.flex-row {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-
-}
-
-.flex-col {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-
-}
-       .gnb {
-    background-color: #f53d2d;
-    padding: 10px;
-    color: white;
-
-}
-
-.top,
-.bottom {
-    width: 1200px;
-    margin: auto;
-}
-
-.top {
-    margin-bottom: 20px
-}
-
-.left {
-    margin-right: auto;
-}
-
-.left>li,
-.left>i {
-    margin-right: 7px;
-}
-
-.right {
-    margin-left: auto;
-}
-
-.right>li,
-.right>i {
-    margin-left: 10px;
-}
-
-.right>li>i {
-    margin-right: 7px;
-}
-
-.search {
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.search-box {
-    background-color: white;
-    width: 840px;
-    height: 40px;
-    border-radius: 2px;
-    padding: 1px;
-}
-
-.search-box > input {
-    width: 80%;
-    height: 35px;
-
-    margin-right: auto;
-    border: none;
-}
-
-.search-box > button {
-    background-color: #f53d2d;
-    color: white;
-    width: 60px;
-    height: 35px;
-    border-radius: 2px;
-    margin-right: 1px;
-    border: none;
-}
-
-.tags {
-    margin-top: 5px;
-}
-
-.tags>li {
-    margin-right: 10px;
-}
-
-.tags>li:last-child {
-    margin-right: auto;
-}
-
-.cart {
-    font-size: 27px;
-    margin-right: 70px;
-}
-.bottom > img {
-    margin-bottom: 10px;
-}
+        @import url('css/default.css');
+        @import url('css/gnb.css');
+        @import url('css/banner.css');
     </style>
-
-
 </head>
 
 <body>
@@ -133,11 +23,11 @@
             <div class="left flex-row">
                 <li>Seller Centre</li>
                 <li>|</li>
-                <li>Mulai Berjualan</li>
+                <li>Mulai Jual</li>
                 <li>|</li>
                 <li>Download</li>
                 <li>|</li>
-                <li>Ikuti Kami</li>
+                <li>Ikuti Kami Di</li>
                 <i class="bi bi-facebook"></i>
                 <i class="bi bi-instagram"></i>
                 <i class="bi bi-person-circle"></i>
@@ -145,17 +35,17 @@
             <div class="right flex-row">
                 <li><i class="bi bi-bell"></i>Notifikasi</li>
                 <li><i class="bi bi-question-circle"></i>Bantuan</li>
-                <li><i class="bi bi-globe"></i>Bahasa Indonesia<i class="bi bi-caret-down-fill"></i>
+                <li><i class="bi bi-globe"></i>Bahasa Indonesia<i class="bi bi-caret-down"></i></li>
                 <li>Daftar</li>
                 <li>|</li>
-                <li>Log In</li>
+                <li>Login</li>
             </div>
         </div>
         <div class="bottom flex-row">
-            <img width="160" height="50" src="./https://i.postimg.cc/L6dZP1YH/logo-shopee.png">
+            <img width="150" height="50" src="./image/logo_shopee.png">
             <div class="search flex-col">
                 <div class="search-box flex-row">
-                    <input type="text">
+                    <input type="text" placeholder="this page is made by Nazriel Ramdhani">
                     <button><i class="bi bi-search"></i></button>
                 </div>
                 <div class="tags flex-row">
@@ -166,13 +56,201 @@
                     <li>Sepatu Anak Perempuan</li>
                     <li>Kebaya</li>
                     <li>Sepatu Kaca</li>
+                    <li>Sarung Helm</li>
                 </div>
             </div>
             <div class="cart">
                 <i class="bi bi-cart"></i>
             </div>
         </div>
-
-
-
+    </div>
+    <div class="banners flex-col">
+        <div class="top-section flex-row">
+            <div class="left-banners swiper">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide"><img class="rolling-banner" src="image/banners/banner_1.png"></div>
+                    <div class="swiper-slide"><img class="rolling-banner" src="image/banners/banner_2.png"></div>
+                    <div class="swiper-slide"><img class="rolling-banner" src="image/banners/banner_3.png"></div>
+                    <div class="swiper-slide"><img class="rolling-banner" src="image/banners/banner_4.png"></div>
+                </div>
+                <div class="swiper-pagination"></div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
+            </div>
+            <div class="right-banners flex-col">
+                <img src="image/banners/banner_right_top.png">
+                <img src="image/banners/banner_right_bottom.png">
+            </div>
+        </div>
+        <div class="bottom-section flex-row">
+            <li class="flex-col">
+                <img src="image/icons/1.png">
+                <span>Shopee Pilih Lokal</span>
+            </li>
+            <li class="flex-col">
+                <img src="image/icons/2.png">
+                <span>Elektronik 100% ORI</span>
+            </li>
+            <li class="flex-col">
+                <img src="image/icons/3.png">
+                <span>Pulsa, Tagihan & Tiket</span>
+            </li>
+            <li class="flex-col">
+                <img src="image/icons/4.png">
+                <span>inFashion</span>
+            </li>
+            <li class="flex-col">
+                <img src="image/icons/5.png">
+                <span>Shopee Supermarket</span>
+            </li>
+            <li class="flex-col">
+                <img src="image/icons/6.png">
+                <span>Bayar Di Tempat</span>
+            </li>
+            <li class="flex-col">
+                <img src="image/icons/7.png">
+                <span>Murah Lebay</span>
+            </li>
+            <li class="flex-col">
+                <img src="image/icons/8.png">
+                <span>Gratis Ongkir & Voucher</span>
+            </li>
+            <li class="flex-col">
+                <img src="image/icons/9.png">
+                <span>Promo Bank</span>
+            </li>
+            <li class="flex-col">
+                <img src="image/icons/10.png">
+                <span>Semua Promo</span>
+            </li>
+        </div>
+    </div>
+    <div class="category">
+        <div class="category-wrap flex-col">
+            <div class="category-title">KATEGORI</div>
+            <div class="cards-box flex-row">
+                <li class="flex-col">
+                    <div class="card flex-col">
+                        <img src="image/category/1.png">
+                        <span>Elektronik</span>
+                    </div>
+                    <div class="card flex-col">
+                        <img src="image/category/11.png">
+                        <span>Makanan & Minuman</span>
+                    </div>
+                </li>
+                <li class="flex-col">
+                    <div class="card flex-col">
+                        <img src="image/category/2.png">
+                        <span>Komputer & Aksesoris</span>
+                    </div>
+                    <div class="card flex-col">
+                        <img src="image/category/12.png">
+                        <span>Perawatan & Kecantikan</span>
+                    </div>
+                </li>
+                <li class="flex-col">
+                    <div class="card flex-col">
+                        <img src="image/category/3.png">
+                        <span>Handphone & Aksesoris</span>
+                    </div>
+                    <div class="card flex-col">
+                        <img src="image/category/13.png">
+                        <span>Perlengkapan  Rumah</span>
+                    </div>
+                </li>
+                <li class="flex-col">
+                    <div class="card flex-col">
+                        <img src="image/category/4.png">
+                        <span>Pakaian Pria</span>
+                    </div>
+                    <div class="card flex-col">
+                        <img src="image/category/14.png">
+                        <span>Pakaian Wanita</span>
+                    </div>
+                </li>
+                <li class="flex-col">
+                    <div class="card flex-col">
+                        <img src="image/category/5.png">
+                        <span>Sepatu Pria</span>
+                    </div>
+                    <div class="card flex-col">
+                        <img src="image/category/15.png">
+                        <span>Fashion Muslim</span>
+                    </div>
+                </li>
+                <li class="flex-col">
+                    <div class="card flex-col">
+                        <img src="image/category/6.png">
+                        <span>Tas Pria</span>
+                    </div>
+                    <div class="card flex-col">
+                        <img src="image/category/16.png">
+                        <span>Fashion Bayi & Anak</span>
+                    </div>
+                </li>
+                <li class="flex-col">
+                    <div class="card flex-col">
+                        <img src="image/category/7.png">
+                        <span>Aksesoris Fashion</span>
+                    </div>
+                    <div class="card flex-col">
+                        <img src="image/category/17.png">
+                        <span>Ibu & Bayi</span>
+                    </div>
+                </li>
+                <li class="flex-col">
+                    <div class="card flex-col">
+                        <img src="image/category/8.png">
+                        <span>Jam Tangan</span>
+                    </div>
+                    <div class="card flex-col">
+                        <img src="image/category/18.png">
+                        <span>Sepatu Wanita</span>
+                    </div>
+                </li>
+                <li class="flex-col">
+                    <div class="card flex-col">
+                        <img src="image/category/9.png">
+                        <span>Kesehatan</span>
+                    </div>
+                    <div class="card flex-col">
+                        <img src="image/category/19.png">
+                        <span>Tas Wanita</span>
+                    </div>
+                </li>
+                <li class="flex-col">
+                    <div class="card flex-col">
+                        <img src="image/category/10.png">
+                        <span>Hobi & Koleksi</span>
+                    </div>
+                    <div class="card flex-col">
+                        <img src="image/category/20.png">
+                        <span>Otomotif</span>
+                    </div>
+                </li>
+            </div>
+        </div>
+    </div>
+    <div class="floating">
+        <img src="image/floating.png">
+    </div>
+    <script>
+        const swiper = new Swiper('.swiper', {
+            autoplay: {
+                delay: 3000,
+            },
+            direction: 'horizontal',
+            loop: true,
+            pagination: {
+                el: '.swiper-pagination',
+            },
+            navigation: {
+                nextEl: '.swiper-button-next',
+                prevEl: '.swiper-button-prev',
+            },
+        });
+    </script>
 </body>
+
+</html>
